--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "prepare": "husky install"
   },
   "private": true,
   "devDependencies": {
@@ -39,7 +40,9 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.27.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "husky": "^7.0.4",
     "jest": "27.2.3",
+    "lint-staged": "^12.2.2",
     "prettier": "^2.3.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
@@ -56,5 +59,8 @@
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,json,css,scss,md,mdx,html,vue,yaml}": "prettier --write"
   }
 }
