--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,8 +24,9 @@ jobs:
           node-version: '16'
       - run: npm ci
       - run: npx nx-cloud start-ci-run    
-      - run: npx nx affected --target=build --parallel --max-parallel=3
+      - run: npx nx affected --target=lint --parallel --max-parallel=2
       - run: npx nx affected --target=test --parallel --max-parallel=2
+      - run: npx nx affected --target=build --parallel --max-parallel=3
       - run: npx nx-cloud stop-all-agents
   pr:
     runs-on: ubuntu-latest
@@ -42,12 +43,13 @@ jobs:
           node-version: '16'
       - run: npm ci
       - run: npx nx-cloud start-ci-run
-      - run: npx nx affected --target=build --parallel --max-parallel=3
+      - run: npx nx affected --target=lint --parallel --max-parallel=2
       - run: npx nx affected --target=test --parallel --max-parallel=2
+      - run: npx nx affected --target=build --parallel --max-parallel=3
       - run: npx nx-cloud stop-all-agents
   agents:
     runs-on: ubuntu-latest
-    name: Agent 1
+    name: Agent ${{ matrix.agent }}
     timeout-minutes: 60
     strategy:
       matrix:
