feat(styles): WIP

--- a/package.json
+++ b/package.json
@@ -25,12 +25,19 @@
     "@nrwl/tao": "13.8.3",
     "@nrwl/web": "13.8.3",
     "@nrwl/workspace": "13.8.3",
+    "@styled-system/css": "^5.1.5",
+    "@styled-system/should-forward-prop": "^5.1.5",
+    "@styled-system/theme-get": "^5.1.2",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
+    "@types/styled-system": "^5.1.15",
+    "@types/styled-system__css": "^5.0.16",
+    "@types/styled-system__should-forward-prop": "^5.1.2",
+    "@types/styled-system__theme-get": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
     "babel-jest": "27.2.3",
@@ -53,6 +60,7 @@
     "react-dom": "17.0.2",
     "react-test-renderer": "17.0.2",
     "regenerator-runtime": "0.13.7",
+    "styled-system": "^5.1.5",
     "ts-jest": "27.0.5",
     "tslib": "^2.0.0",
     "typescript": "~4.4.3"
