--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@mdunhem/personal-site-ui": ["libs/personal-site/ui/src/index.ts"]
+      "@mdunhem/personal-site-ui": ["libs/personal-site/ui/src/index.ts"],
+      "@mdunhem/shared-styles": ["libs/shared/styles/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
