--- a/package.json
+++ b/package.json
@@ -11,54 +11,51 @@
   "private": true,
   "devDependencies": {
     "@emotion/babel-plugin": "11.3.0",
-    "@nrwl/cli": "13.4.6",
-    "@nrwl/cypress": "13.4.6",
-    "@nrwl/eslint-plugin-nx": "13.4.6",
-    "@nrwl/jest": "13.4.6",
-    "@nrwl/linter": "13.4.6",
-    "@nrwl/next": "^13.4.6",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "^13.4.6",
-    "@nrwl/tao": "13.4.6",
-    "@nrwl/web": "13.4.6",
-    "@nrwl/workspace": "13.4.6",
+    "@emotion/react": "11.5.0",
+    "@emotion/server": "11.4.0",
+    "@emotion/styled": "11.3.0",
+    "@nrwl/cli": "13.8.3",
+    "@nrwl/cypress": "13.8.3",
+    "@nrwl/eslint-plugin-nx": "13.8.3",
+    "@nrwl/jest": "13.8.3",
+    "@nrwl/linter": "13.8.3",
+    "@nrwl/next": "13.8.3",
+    "@nrwl/nx-cloud": "13.1.5",
+    "@nrwl/react": "13.8.3",
+    "@nrwl/tao": "13.8.3",
+    "@nrwl/web": "13.8.3",
+    "@nrwl/workspace": "13.8.3",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "~5.3.0",
-    "@typescript-eslint/parser": "~5.3.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "babel-jest": "27.2.3",
+    "core-js": "^3.6.5",
     "cypress": "^9.1.0",
-    "eslint": "8.2.0",
+    "eslint": "8.7.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.27.0",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "husky": "^7.0.4",
     "jest": "27.2.3",
     "lint-staged": "^12.2.2",
-    "prettier": "^2.3.1",
-    "react-test-renderer": "17.0.2",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
-  },
-  "dependencies": {
-    "@emotion/react": "11.5.0",
-    "@emotion/server": "11.4.0",
-    "@emotion/styled": "11.3.0",
-    "@nrwl/next": "13.4.6",
-    "core-js": "^3.6.5",
-    "next": "12.0.7",
+    "next": "^12.1.0",
+    "prettier": "2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-test-renderer": "17.0.2",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "ts-jest": "27.0.5",
+    "tslib": "^2.0.0",
+    "typescript": "~4.4.3"
   },
   "lint-staged": {
     "*.{ts,tsx,js,json,css,scss,md,mdx,html,vue,yaml}": "prettier --write"
